# cryptoview

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  tiingoconnection.cpp  tiingoconnection.hpp
